--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "type": "module",
+  "bin": {
+    "practicemcpnode": "./build/index.js"
+  },  
   "name": "practicenodemcp",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && chmod 755 build/index.js"
   },
+  "files": [
+    "build"
+  ],  
   "keywords": [],
   "author": "",
   "license": "ISC",
