--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "bin": {
     "practicemcpnode": "./build/index.js"
-  },  
+  },
   "name": "practicenodemcp",
   "version": "1.0.0",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "files": [
     "build"
-  ],  
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,7 +22,11 @@
     "zod": "^3.25.23"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.21",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
