--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "commonjs", // commonjsを指定しているためESの新しい機能は利用できない。
     "outDir": "./build",
     "rootDir": "./src",
     "strict": true,
