--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "build": "tsc && chmod 755 build/index.js"
   },
   "files": [
@@ -22,11 +22,10 @@
     "zod": "^3.25.23"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.21",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.3.4",
+    "@vitest/coverage-v8": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.4"
   }
 }
