--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,10 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "types": ["vitest/globals", "node"] // Vitestのグローバル型とNode.jsの型を使用
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": [
-    "node_modules",
-    "src/**/*.test.ts", // テストを除外しないとビルド時にエラー
-    "src/**/*.spec.ts"  // こちらも同様
+    "node_modules"
   ]
 }
